infrastructure/policy/gatekeeper/templates/deny-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: nexus-v30denprivileged
spec:
  crd:
    spec:
      names:
        kind: NexusDenyPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package nexus.denyprivileged

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          c.securityContext.privileged == true
          msg := sprintf("Container '%v' must not run as privileged", [c.name])
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          c.securityContext.allowPrivilegeEscalation == true
          msg := sprintf("Container '%v' must not allow privilege escalation", [c.name])
        }

        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.securityContext.readOnlyRootFilesystem
          msg := sprintf("Container '%v' must use readOnlyRootFilesystem", [c.name])
        }
